--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	max-width: 1200px;
 	margin: 1rem auto 0;
-	padding: 0.5rem 1rem;
+	padding: 0.5rem 0rem;
 	background-color: rgba(150, 150, 150, 0.7);
 	backdrop-filter: blur(8px);
 	border-radius: 12px;
