--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+	width: 100%;
+	overflow-x: hidden;
 }
 
 .root {
